# TrailCurrentFluidCNCPendant

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
GUI/: README.md  TrailCurrentFluidCNCPendant.eez-project
assets/: README.md
components/fluidnc/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/fluidnc/include/: fluidnc.h
components/fluidnc/src/: fluidnc.c  fluidnc_mock.c  proto.c  proto.h  transport.h  transport_telnet.c  transport_uart.c  transport_ws.c
components/pendant_config/: CMakeLists.txt
components/pendant_config/include/: pendant_config.h
components/pendant_config/src/: pendant_config.c
components/wifi_setup/: CMakeLists.txt
components/wifi_setup/include/: wifi_setup.h
components/wifi_setup/src/: wifi_setup.c
docs/: 01-overview.md  02-getting-started.md  03-screen-tour.md  04-how-it-talks-to-fluidnc.md  05-architecture.md  06-building-and-flashing.md  07-customizing.md  08-troubleshooting.md  README.md
main/: CMakeLists.txt  actions.c  app_state.c  app_state.h  idf_component.yml  main.c  thumbstick_monitor.c  thumbstick_monitor.h  vars.c
main/ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_font_fa_16.c  ui_font_fa_22.c  ui_font_fa_28.c  ui_font_mono_13.c  ui_font_mono_22.c  ui_font_mono_30.c  ui_font_mono_46.c  ui_font_mono_50.c  vars.h
